// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip snapshot (dois temas): claro 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": true,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "justifyContent": "center",
      "minHeight": 44,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFE6F1",
        "borderColor": "#C7186B",
        "borderRadius": 999,
        "borderWidth": 1,
        "justifyContent": "center",
        "minHeight": 34,
        "minWidth": 44,
        "paddingHorizontal": 14,
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.3}
      style={
        [
          {
            "fontFamily": "Inter-Medium",
            "fontSize": 14,
            "lineHeight": 18,
          },
          {
            "color": "#C7186B",
          },
          {
            "fontSize": 15,
            "lineHeight": 20,
          },
          null,
        ]
      }
    >
      Mercado
    </Text>
  </View>
</View>
`;

exports[`Chip snapshot (dois temas): escuro 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": true,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "justifyContent": "center",
      "minHeight": 44,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#351827",
        "borderColor": "#FF4FA0",
        "borderRadius": 999,
        "borderWidth": 1,
        "justifyContent": "center",
        "minHeight": 34,
        "minWidth": 44,
        "paddingHorizontal": 14,
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.3}
      style={
        [
          {
            "fontFamily": "Inter-Medium",
            "fontSize": 14,
            "lineHeight": 18,
          },
          {
            "color": "#FF4FA0",
          },
          {
            "fontSize": 15,
            "lineHeight": 20,
          },
          null,
        ]
      }
    >
      Mercado
    </Text>
  </View>
</View>
`;
